# sdl-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: tutorial1_frag.glsl  tutorial1_vert.glsl
src/: game.cpp  game.h  main.cpp
src/engine/: engine.cpp  engine.h
src/engine/gl/: gl_debug.cpp  gl_debug.h  gl_scene.cpp  gl_scene.h  gl_shader.cpp  gl_shader.h
src/engine/input/: input.cpp  input.h
src/engine/mesh/: primitives.cpp  primitives.h
src/engine/render/: camera.cpp  camera.h  renderable.h
src/engine/util/: ExpectedWrapper.h  SDLWrapper.h
src/util/: Dog.cpp  Dog.h  ExpectedWrapper.cpp  ExpectedWrapper.h  SDLWrapper.h
